[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalman-filter"
version = "0.1.0"
description = "Python implementation of a Kalman Filter for linear dynamic systems."
readme = "Readme.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Manuel Z" }]
keywords = ["kalman", "filter", "state-estimation", "tracking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/ManuelZ/Kalman-Filter"

[tool.hatch.build.targets.wheel]
packages = ["kalman_filter"]

[tool.hatch.build.targets.sdist]
include = ["kalman_filter", "Readme.md", "pyproject.toml"]